# monke-cpp

./: .gitignore  CMakeLists.txt  README.md  compile.sh  shell.nix
.cache/clangd/index/: ast.cpp.7FED2CA5C4B565A9.idx  ast.h.AC65B14B3F7B74D2.idx  lexer.cpp.FF14CF30EA64CCB1.idx  lexer.h.5BE4D421CA584367.idx  main.cpp.17A3263A9B4E544C.idx  main.cpp.B4027376EC593DD9.idx  parser.cpp.C66E1830EBD37510.idx  parser.h.6C9D67850D05A4EF.idx  token.cpp.94B1D8BA75FC2E5A.idx  token.h.125BE53407971271.idx  token_test.cpp.6E32736FEFE2E719.idx
src/: ast.cpp  ast.h  eval.cpp  eval.h  lexer.cpp  lexer.h  main.cpp  object.cpp  object.h  parser.cpp  parser.h  token.cpp  token.h  utils.cpp  utils.h
test/: CMakeLists.txt  ast_test.cpp  eval_test.cpp  main.cpp  parser_test.cpp  token_test.cpp
test_programs/: advanced.monke  basic.monke
